chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -229,11 +229,12 @@ tags
 
 ### vscode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 *.code-workspace
+.history/*
 
 ### Windows ###
 # Windows thumbnail cache files
