--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.7"
 Flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.9.0"
+black = "^20.8b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
