--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ Flask = "^1.1.2"
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.0"
 black = "^20.8b1"
+pre-commit = "^2.11.1"
+pre-commit-hooks = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
