--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ Flask = "^1.1.2"
 flake8 = "^3.9.0"
 black = "^20.8b1"
 pre-commit = "^2.11.1"
-pre-commit-hooks = "^3.4.0"
+pylint = "^2.7.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
